--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -7,6 +7,7 @@
     <title>A y M - Servicios</title>
     <link rel="stylesheet" href="../css/servicios.css">
     <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 <body>
