Servicios Page Updated

--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -46,12 +46,12 @@
         <h2>Nuestros clientes <strong>satisfechos son:</strong></h2>
         <div class="clientes-wrapper">
             <img src="/img/servicios/cliente-1.png" alt="Logo de Cliente">
-            <img src="/img/servicios/cliente-1.png" alt="Logo de Cliente">
-            <img src="/img/servicios/cliente-1.png" alt="Logo de Cliente">
-            <img src="/img/servicios/cliente-1.png" alt="Logo de Cliente">
-            <img src="/img/servicios/cliente-1.png" alt="Logo de Cliente">
-            <img src="/img/servicios/cliente-1.png" alt="Logo de Cliente">
-            <img src="/img/servicios/cliente-1.png" alt="Logo de Cliente">
+            <img src="/img/servicios/cliente-2.png" alt="Logo de Cliente">
+            <img src="/img/servicios/cliente-3.png" alt="Logo de Cliente">
+            <img src="/img/servicios/cliente-4.png" alt="Logo de Cliente">
+            <img src="/img/servicios/cliente-5.png" alt="Logo de Cliente">
+            <img src="/img/servicios/cliente-6.png" alt="Logo de Cliente">
+            <img src="/img/servicios/cliente-7.png" alt="Logo de Cliente">
         </div>
     </div>
 
@@ -65,31 +65,31 @@
                 <div class="content">
                     <h3>Gestión de Proyectos</h3>
                     <p>Nos encargamos de la planificación, ejecución y supervisión integral de proyectos, asegurando que cada fase se cumpla dentro de plazos y presupuesto, con la máxima calidad y seguridad.</p>
-                    <a class="btn">Contactar a un asesor</a>
+                    <a href="contacto.html" class="btn">Contactar a un asesor</a>
                 </div>
             </div>
             <div class="service-card">
-                <img src="/img/servicios/servicio-1.png" alt="Imagen del Servicio">
+                <img src="/img/servicios/servicio-2.png" alt="Imagen del Servicio">
                 <div class="content">
                     <h3>Gestión de Proyectos</h3>
                     <p>Nos encargamos de la planificación, ejecución y supervisión integral de proyectos, asegurando que cada fase se cumpla dentro de plazos y presupuesto, con la máxima calidad y seguridad.</p>
-                    <a class="btn">Contactar a un asesor</a>
+                    <a href="contacto.html" class="btn">Contactar a un asesor</a>
                 </div>
             </div>
             <div class="service-card">
-                <img src="/img/servicios/servicio-1.png" alt="Imagen del Servicio">
+                <img src="/img/servicios/servicio-3.png" alt="Imagen del Servicio">
                 <div class="content">
                     <h3>Gestión de Proyectos</h3>
                     <p>Nos encargamos de la planificación, ejecución y supervisión integral de proyectos, asegurando que cada fase se cumpla dentro de plazos y presupuesto, con la máxima calidad y seguridad.</p>
-                    <a class="btn">Contactar a un asesor</a>
+                    <a href="contacto.html" class="btn">Contactar a un asesor</a>
                 </div>
             </div>
             <div class="service-card">
-                <img src="/img/servicios/servicio-1.png" alt="Imagen del Servicio">
+                <img src="/img/servicios/servicio-4.png" alt="Imagen del Servicio">
                 <div class="content">
                     <h3>Gestión de Proyectos</h3>
                     <p>Nos encargamos de la planificación, ejecución y supervisión integral de proyectos, asegurando que cada fase se cumpla dentro de plazos y presupuesto, con la máxima calidad y seguridad.</p>
-                    <a class="btn">Contactar a un asesor</a>
+                    <a href="contacto.html" class="btn">Contactar a un asesor</a>
                 </div>
             </div>
         </div>
