--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -7,6 +7,7 @@
     <title>A y M</title>
     <link rel="stylesheet" href="../css/nosotros.css">
     <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 <body>
@@ -88,17 +89,6 @@
                     soluciones innovadoras y de alta calidad, cumpliendo siempre con los más altos estándares de
                     seguridad y eficiencia.</p>
             </div>
-        </div>
-    </div>
-
-
-
-
-    <div class="block-3">
-        <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod <br>tempor incididunt ut labore
-                et dolore magna aliqua. </p>
-            <button>Contáctanos</button>
         </div>
     </div>
 
