--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="vectores">
             <div class="vector-circulo"><img src="img/inicio/circulo.png" alt=""></div>
             <div class="vector-text">
-                <p>Nuestra Sectores</p>
+                <p>Nuestros Sectores</p>
             </div>
             <div class="vector-circulo"><img src="img/inicio/circulo.png" alt=""></div>
         </div>
