--- a/paginas/proyectos.html
+++ b/paginas/proyectos.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-pe">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A y M - Proyectos</title>
+    <meta name="title" content="AyM - Consultores y Ejecutores">
+    <title>AyM - Consultores y Ejecutores</title>
+    <meta name="description" content="Unimos experiencia y pasión para atender áreas clavecomo sistemas, agricultura, construcción, eventos y más, siemprecon compromiso y calidad.">
+    <meta name="keywords" content="consultoría, servicios, asesoramiento, ejecución, construcción, eventos, agricultura, sistemas, experiencia">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="Spanish">
     <link rel="stylesheet" href="../css/proyectos.css">
     <link rel="stylesheet" href="/css/header.css">
 </head>
