--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     </header>
 
     <div class="container">
-        <p class="text-1">Desarrollamos y gestionamos <br>proyectos de construcción e <br>ingeniería para multiples
-            sectores</p><br>
-        <p class="text-2">Atendemos oil & gas, energía, plantas industriales y obras civiles de <br>arquitectura e
-            infraestructura.</p><br>
+        <h1 class="text-1">Desarrollamos y gestionamos <br>proyectos de construcción e <br>ingeniería para multiples
+            sectores</h1><br>
+        <h2 class="text-2">Atendemos oil & gas, energía, plantas industriales y obras civiles de <br>arquitectura e
+            infraestructura.</h2><br>
         <button>Ver Servicios</button>
     </div>
 
@@ -50,7 +50,7 @@
         <div class="vectores">
             <div class="vector-circulo"><img src="img/inicio/circulo.png" alt=""></div>
             <div class="vector-text">
-                <p>Nuestra Empresa</p>
+                <h2>Nuestra Empresa</h2>
             </div>
             <div class="vector-circulo"><img src="img/inicio/circulo.png" alt=""></div>
         </div>
@@ -73,7 +73,7 @@
         <div class="vectores">
             <div class="vector-circulo"><img src="img/inicio/circulo.png" alt=""></div>
             <div class="vector-text">
-                <p>Nuestros Sectores</p>
+                <h2>Nuestros Sectores</h2>
             </div>
             <div class="vector-circulo"><img src="img/inicio/circulo.png" alt=""></div>
         </div>
@@ -125,7 +125,7 @@
             <div><a href="">CONTACTO</a></div>
         </div>
         <div class="follow">
-            <p>Siguenos en:</p>
+            <h3>Siguenos en:</h3>
             <div class="redes">
                 <div> <a href=""><img src="img/footer/facebook.png" alt=""></a>
                 </div>
