--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <picture>
-            <img src="../img/inicio/logo.png" alt="">
+            <img src="../img/inicio/logo.png" alt="Logo del Sitio">
         </picture>
         <nav class="header-mobile">
             <ul>
@@ -48,15 +48,15 @@
 
     <div class="block-1">
         <div class="vectores">
-            <div class="vector-circulo"><img src="img/inicio/circulo.png" alt=""></div>
+            <div class="vector-circulo"><img src="img/inicio/circulo.png" alt="Circulo Deco"></div>
             <div class="vector-text">
                 <h2>Nuestra Empresa</h2>
             </div>
-            <div class="vector-circulo"><img src="img/inicio/circulo.png" alt=""></div>
+            <div class="vector-circulo"><img src="img/inicio/circulo.png" alt="Circulo Deco"></div>
         </div>
 
         <div class="descripcion">
-            <div><img src="img/inicio/descricpion.png" alt=""></div>
+            <div><img src="img/inicio/descricpion.png" alt="Imagen para descripción del sitio"></div>
             <div>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -71,38 +71,38 @@
 
     <div class="block-2">
         <div class="vectores">
-            <div class="vector-circulo"><img src="img/inicio/circulo.png" alt=""></div>
+            <div class="vector-circulo"><img src="img/inicio/circulo.png" alt="Circulo Deco"></div>
             <div class="vector-text">
                 <h2>Nuestros Sectores</h2>
             </div>
-            <div class="vector-circulo"><img src="img/inicio/circulo.png" alt=""></div>
+            <div class="vector-circulo"><img src="img/inicio/circulo.png" alt="Circulo Deco"></div>
         </div>
         <p class="text-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <br>incididunt
             ut labore et dolore magna aliqua. </p>
 
         <div class="cuadros">
             <div>
-                <img src="img/inicio/sistemas.png" alt="">
+                <img src="img/inicio/sistemas.png" alt="Sector de Sistemas">
             </div>
 
             <div>
-                <img src="img/inicio/industria.png" alt="">
+                <img src="img/inicio/industria.png" alt="Sector de Industria">
             </div>
 
             <div>
-                <img src="img/inicio/agro.png" alt="">
+                <img src="img/inicio/agro.png" alt="Sector de Agricultura">
             </div>
 
             <div>
-                <img src="img/inicio/construccion.png" alt="">
+                <img src="img/inicio/construccion.png" alt="Sector de Construcción">
             </div>
 
             <div>
-                <img src="img/inicio/eventos.png" alt="">
+                <img src="img/inicio/eventos.png" alt="Sector de Eventos">
             </div>
 
             <div>
-                <img src="img/inicio/servicios.png" alt="">
+                <img src="img/inicio/servicios.png" alt="Serctor de Servicios Generales">
             </div>
         </div>
     </div>
