--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </div>
 
     <footer>
-        <div><img src="img/footer/footer_logo.png" alt=""></div>
+        <div><img src="img/footer/footer_logo.png" alt="Logo del sitio para el pie de página"></div>
         <div class="links">
             <div><a href="">INICIO</a></div>
             <div><a href="">NOSOTROS</a></div>
@@ -127,11 +127,11 @@
         <div class="follow">
             <h3>Siguenos en:</h3>
             <div class="redes">
-                <div> <a href=""><img src="img/footer/facebook.png" alt=""></a>
+                <div> <a href=""><img src="img/footer/facebook.png" alt="Redes Sociales - Facebook"></a>
                 </div>
-                <div> <a href=""><img src="img/footer/youtube.png" alt=""></a>
+                <div> <a href=""><img src="img/footer/youtube.png" alt="Redes Sociales - Youtube"></a>
                 </div>
-                <div> <a href=""><img src="img/footer/linkedin-in.png" alt=""></a>
+                <div> <a href=""><img src="img/footer/linkedin-in.png" alt="Redes Sociales - LikedIn"></a>
                 </div>
             </div>
         </div>
