--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod <br>tempor incididunt ut labore
                 et dolore magna aliqua. </p>
-            <button>Contáctanos</button>
+            <a href="https://2rpconsultores.com/" rel="nofollow">Vista esta pagina también</a>
         </div>
     </div>
 
